fix: use SchemaExtractor/SchemaWriter interfaces in App; extract printBanner; use .toList() in SummaryPrinter